allmost working